# app_cp

./: build.gradle.kts  gradle.properties  kls_database.db  settings.gradle.kts
app/: build.gradle.kts
app/schemas/com.example.lancelot.AppDatabase/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json
app/src/androidTest/java/com/example/lancelot/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/queries/cpp/: highlights.scm
app/src/main/java/com/example/lancelot/: CodeEditor.kt  CodeFile.kt  ColorUtils.kt  Database.kt  DbProvider.kt  LancelotApp.kt  MainActivity.kt  Theme.kt  WebView.kt
app/src/main/java/com/example/lancelot/browser/: BrowserViewModel.kt
app/src/main/java/com/example/lancelot/common/: RustResult.kt
app/src/main/java/com/example/lancelot/config/: ConfigManager.kt
app/src/main/java/com/example/lancelot/configpanel/: ConfigPanel.kt  ConfigurationViewModel.kt  StylesTab.kt  ThemesTab.kt
app/src/main/java/com/example/lancelot/di/: AppModule.kt
app/src/main/java/com/example/lancelot/editor/: EditorState.kt
app/src/main/java/com/example/lancelot/mcpe/: Rope.kt  (+3 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/lancelot/: ExampleUnitTest.kt  RustBridgeHighlightTest.kt  ThemeManagerTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust-lib/: Cargo.toml  build.ps1
rust-lib/src/: cache.rs  caching.rs  code_exec.rs  future.rs  highlighting.rs  incremental.rs  jni_bridge.rs  lib.rs  logger.rs  text_utils.rs  theme.rs  types.rs  utils.rs
(+41 files in other folders)
