[package]
name = "runix"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "runix"

[dependencies]
android_logger = "0.15.0"
anyhow = "1.0.98"
jni = {version = "0.21.1", features = ["invocation"]}
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.25.3"
tree-sitter-highlight = "0.25.3"
tree-sitter-cpp = "0.23.4"
tree-sitter-javascript = "0.23.1" 
tree-sitter-python = "0.23.6"
piston_rs = "0.4.3"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }
once_cell = "1.21.3"

[build-dependencies]
cc="*"
